--- a/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
@@ -88,6 +88,11 @@
 								</a>
 							{% endif %}
 						</div>
+						<div class="list-group-item-text">
+							<a href="{{ path('groupeSecondaire.admin.member.remove', {'groupe': groupeSecondaire.id, 'membre'; membre.id}) }}">
+								Retirer ce membre.
+							</a>
+						</div>
 					</div>
 				{% endfor %}
 			</div>
