--- a/src/LarpManager/Views/admin/territoire/list.twig
+++ b/src/LarpManager/Views/admin/territoire/list.twig
@@ -34,7 +34,7 @@
 						</h4>
 						<p class="list-group-item-text">		
 							{% if territoire.description %}
-								<p class="text-default">{{ territoire.description|slice(0,500) }} ...</p>
+								<p class="text-default">{{ territoire.description|slice(0,500)|markdown }} ...</p>
 							{% else %}
 								<p class="text-warning">Attention, ce territoire n'a pas description</p>
 							{%  endif %}
