--- a/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
@@ -89,7 +89,7 @@
 							{% endif %}
 						</div>
 						<div class="list-group-item-text">
-							<a href="{{ path('groupeSecondaire.admin.member.remove', {'groupe': groupeSecondaire.id, 'membre'; membre.id}) }}">
+							<a href="{{ path('groupeSecondaire.admin.member.remove', {'groupe': groupeSecondaire.id, 'membre': membre.id}) }}">
 								Retirer ce membre.
 							</a>
 						</div>
