Ajout des domaines de magie. Ajout des "déclencheurs" d'événement (lorsqu'un perso obtient une compétence qui lui permet d'acceder a des formulaires supplémentaires)

--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -68,6 +68,7 @@
 						<li><a href="{{ path('classe') }}">Classes</a></li>
 						<li><a href="{{ path('age') }}">Ages</a></li>
 						<li><a href="{{ path('genre') }}">Genres</a></li>
+						<li><a href="{{ path('magie.domaine.list') }}">Domaine de magie</a></li>
 						<li><a href="{{ path('personnageSecondaire.admin.list') }}">Personnage secondaire</a></li>
 					</ul>
 				</li>
