--- a/src/LarpManager/Views/admin/territoire/add.twig
+++ b/src/LarpManager/Views/admin/territoire/add.twig
@@ -6,7 +6,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
 				<div class="well bs-component">
-					<form action="{{ path('territoire.admin.add') }}" method="POST" {{ form_enctype(form) }} no-validate>
+					<form action="{{ path('territoire.admin.add') }}" method="POST" {{ form_enctype(form) }} novalidate>
 						<fieldset>
 							<legend>Ajout d'un territoire</legend>
 							{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
