--- a/src/LarpManager/Views/admin/territoire/list.twig
+++ b/src/LarpManager/Views/admin/territoire/list.twig
@@ -34,7 +34,7 @@
 						</h4>
 						<p class="list-group-item-text">		
 							{% if territoire.description %}
-								<p class="text-default">{{ territoire.description|slice(0,500)|markdown }} ...</p>
+								<p class="text-default">{{ territoire.description|markdown }} ...</p>
 							{% else %}
 								<p class="text-warning">Attention, ce territoire n'a pas description</p>
 							{%  endif %}
@@ -68,7 +68,7 @@
 							</h4>
 							<p class="list-group-item-text">		
 								{% if region.description %}
-									<p class="text-default">{{ region.description|slice(0,500) }} ...</p>
+									<p class="text-default">{{ region.description|markdown }} ...</p>
 								{% else %}
 									<p class="text-warning">Attention, ce territoire n'a pas description</p>
 								{%  endif %}
@@ -102,7 +102,7 @@
 								</h4>
 								<p class="list-group-item-text">		
 									{% if fief.description %}
-										<p class="text-default">{{ fief.description|slice(0,500) }} ...</p>
+										<p class="text-default">{{ fief.description|markdown }} ...</p>
 									{% else %}
 										<p class="text-warning">Attention, ce territoire n'a pas description</p>
 									{%  endif %}
