quelques corrections et préparation à la magie.

--- a/src/LarpManager/Views/admin/diplomatie.twig
+++ b/src/LarpManager/Views/admin/diplomatie.twig
@@ -65,7 +65,7 @@
 							style="background-color: lightgreen;"
 						{% elseif groupe.isEnemyTo(groupeTmp) %}
 							style="background-color: red;"
-						{% elseif groupe.isWaitingPeace(groupeTmp) %}
+						{% elseif groupe.isWaitingPeaceTo(groupeTmp) %}
 							style="background-color: orange;"
 						{% else %}
 							
