--- a/src/LarpManager/Views/homepage/fragment/personnage.twig
+++ b/src/LarpManager/Views/homepage/fragment/personnage.twig
@@ -101,6 +101,18 @@
 			</div>
 		</div>
 		
+		<div class="header">
+			<h5>Magie</h5>
+		</div>
+		
+		{% if personnage.hasTrigger('MAGIE APPRENTI') %}
+			<blockquote>
+				<p>Votre compétence Magie au niveau apprenti vous permet de choisir un domaine de magie</p>
+				<p>Les sorts que vous lancez dans ce domaine coûteront moins cher que les autres en mana</p>
+				<a href="{{ path('personnage.magie.domaine', {'personnage': personnage.id}) }}">Choisir un domaine de magie</a>
+			</blockquote>
+		{% endif %}
+		
 		
 		<div class="header">
 			<h5>Languages connus</h5>
