--- a/src/LarpManager/Views/user/email/declareWar.twig
+++ b/src/LarpManager/Views/user/email/declareWar.twig
@@ -1,6 +1,6 @@
 {# The subject line. #}
 {%- block subject -%}{%- autoescape false -%}
-    Un groupe vous a déclarer la guerre !
+    Un groupe vous a déclaré la guerre !
 {%- endautoescape -%}{%- endblock -%}
 
 {# The plain text message. #}
@@ -12,7 +12,7 @@ Le groupe {{ war.groupe.nom }} vous a déclaré la guerre :
 
 Cliquez sur le lien ci-dessous pour accéder directement a la page de gestion de votre groupe :
 
-{{ path('groupe') }}
+{{ groupeUrl }}
 
 {%- endautoescape -%}{%- endblock -%}
 
@@ -24,7 +24,7 @@ Cliquez sur le lien ci-dessous pour accéder directement a la page de gestion de
     <p>{{ war.message|markdown }}</p>
 
     <p>
-        <a href="{{ path('groupe') }}"> Suivez ce lien pour accéder directement a la page de gestion de votre groupe</a>.
+        <a href="{{ groupeUrl }}"> Suivez ce lien pour accéder directement a la page de gestion de votre groupe</a>.
     </p>
 
 {%- endblock -%}
