--- a/src/LarpManager/Views/public/magie/index.twig
+++ b/src/LarpManager/Views/public/magie/index.twig
@@ -55,11 +55,14 @@
 					</div>
 					<p>{{ domaine.description|markdown }}</p>
 					<div class="list-group">
+						{# il ne fait afficher que les sorts correspondant au niveau du mage #}
 						{% for sort in domaine.sorts %}
-							<div class="list-group-item">
-								<div class="list-group-item-heading">{{ sort.label }} - Niveau {{ sort.niveau }}</div>
-								<div class="list-group-item-text">{{ sort.description|markdown }}</div>
-							</div>
+							{% if sort.niveau <= personnage.competenceNiveau('Magie') %}
+								<div class="list-group-item">
+									<div class="list-group-item-heading">{{ sort.label }} - Niveau {{ sort.niveau }}</div>
+									<div class="list-group-item-text">{{ sort.description|markdown }}</div>
+								</div>
+							{% endif %}
 						{% endfor %}
 					</div>
 				</div>
