Ajout de la gestion du matériel pour les groupes

--- a/src/LarpManager/Views/admin/groupe/update.twig
+++ b/src/LarpManager/Views/admin/groupe/update.twig
@@ -34,6 +34,7 @@
 						<div class="panel-body">
 							{{ form_row(form.numero) }}
 							{{ form_row(form.scenariste) }}
+							{{ form_row(form.materiel) }}
 						</div>
 					</div>
 
