--- a/src/LarpManager/Views/admin/groupe/add.twig
+++ b/src/LarpManager/Views/admin/groupe/add.twig
@@ -35,6 +35,7 @@
 						<div class="panel-body">
 							{{ form_row(form.numero) }}
 							{{ form_row(form.scenariste) }}
+							{{ form_row(form.materiel) }}
 						</div>
 					</div>
 
