--- a/src/LarpManager/Views/admin/groupe/detail.twig
+++ b/src/LarpManager/Views/admin/groupe/detail.twig
@@ -229,6 +229,13 @@
 		<div class="col-xs-12 col-md-6">
 		
 			<div class="panel panel-default">
+				<div class="panel-heading">Matériel</div>
+				<div class="panel-body">
+					{{ groupe.materiel|markdown }}
+				</div>
+			</div>
+				
+			<div class="panel panel-default">
 				<div class="panel-heading">Background</div>
 				<div class="panel-body">
 					<a href="{{ path('background.add', {'groupe': groupe.id}) }}">Ajouter un élément de background</a>
