--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -62,6 +62,28 @@
 				</div>
 				
 				<div class="list-group-item">
+					<h6 class="list-group-item-heading">Liste des domaines de magie</h6>
+					{% for domaine in personnage.domaines %}
+						<p class="list-group-item-text">
+							{{ domaine.label }}
+						</p>
+					{% endfor %}
+				</div>
+				<div class="list-group-item">
+					<h6 class="list-group-item-heading">Liste des sorts</h6>
+					{% for sort in personnage.sorts %}
+						<p class="list-group-item-text">
+							{{ sort.label }} - {{ sort.domaine.label }} Niveau {{ sort.niveau }}
+						</p>
+					{% endfor %}
+					<p class="list-group-item-text">
+						<a href="{{ path('personnage.admin.update.sort', {'personnage': personnage.id}) }}">Modifier la liste des sorts</a>
+					</p>
+				</div>
+				
+				
+				
+				<div class="list-group-item">
 					<h6 class="list-group-item-heading">Religion</h6>
 					<p class="list-group-item-text">
 					{% for personnageReligion in personnage.personnagesReligions %}
