préparation gestion des potions

--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -70,6 +70,7 @@
 						<li><a href="{{ path('genre') }}">Genres</a></li>
 						<li><a href="{{ path('magie.domaine.list') }}">Domaine de magie</a></li>
 						<li><a href="{{ path('magie.sort.list') }}">Sortilèges</a></li>
+						<li><a href="{{ path('magie.potion.list') }}">Potions</a></li>
 						<li><a href="{{ path('personnageSecondaire.admin.list') }}">Personnage secondaire</a></li>
 					</ul>
 				</li>
