--- a/src/LarpManager/Views/admin/sort/update.twig
+++ b/src/LarpManager/Views/admin/sort/update.twig
@@ -6,7 +6,7 @@
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path('magie.domaine.list') }}">Liste des sortilèges</a></li>
+		<li><a href="{{ path('magie.sort.list') }}">Liste des sortilèges</a></li>
 		<li class="active">Modifier un sortilèges</li>
 	</ol>
 	
