Ajout des niveaux aux potions

--- a/src/LarpManager/Views/admin/potion/detail.twig
+++ b/src/LarpManager/Views/admin/potion/detail.twig
@@ -13,7 +13,7 @@
 	<div class="list-group">
 		<div class="list-group-item">
 			<div class="list-group-item-heading"><h6>Label</h6></div>
-			<div class="list-group-item-text">{{ potion.label }}</div>
+			<div class="list-group-item-text">{{ potion.label }} - Niveau {{ potion.niveau }}</div>
 		</div>
 		<div class="list-group-item">
 			<h4 class="list-group-item-heading">Document</h4>
