--- a/src/LarpManager/Views/admin/potion/list.twig
+++ b/src/LarpManager/Views/admin/potion/list.twig
@@ -19,7 +19,7 @@
 			<li class="list-group-item">
 				<div class="row">
 					<div class="col-md-8">
-						{{ potion.label }}
+						{{ potion.label }} - Niveau {{ potion.niveau }}
 						{{ potion.description|markdown }}
 						
 					</div>
