--- a/src/LarpManager/Views/admin/potion/delete.twig
+++ b/src/LarpManager/Views/admin/potion/delete.twig
@@ -15,7 +15,7 @@
 		<form action="{{ path('magie.potion.delete', {'potion': potion.id}) }}" method="POST" {{ form_enctype(form) }} novalidate>
 			<fieldset>
 				<legend>Supression d'une potion</legend>
-					{{ potion.label }}
+					{{ potion.label }} - Niveau {{ potion.niveau }}
 					{{ potion.description|markdown }}
 					{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 					{{ form(form) }}
