--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -44,6 +44,7 @@
 					<ul class="dropdown-menu">
 						<li><a href="{{ path('appelation') }}">Appelations</a></li>
 						<li><a href="{{ path('territoire.admin.list') }}">Territoires</a></li>
+						<li><a href="{{ path('titre.admin.list') }}">Titres</a></li>
 						<li><a href="{{ path('world') }}">Cartographie</a></li>
 						<li><a href="{{ path('langue') }}">Langues</a></li>
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
