--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -57,6 +57,9 @@
 						{{ personnage.renomme|default(0) }}
 					</p>
 					<p class="list-group-item-text">
+						Titre : {{ app['personnage.manager'].titre(personnage) }}
+					</p>
+					<p class="list-group-item-text">
 						<a href="{{ path('personnage.admin.update.renomme', {'personnage': personnage.id}) }}">Modifier la renommée</a>
 					</p>
 				</div>
@@ -78,6 +81,17 @@
 					{% endfor %}
 					<p class="list-group-item-text">
 						<a href="{{ path('personnage.admin.update.sort', {'personnage': personnage.id}) }}">Modifier la liste des sorts</a>
+					</p>
+				</div>
+				<div class="list-group-item">
+					<h6 class="list-group-item-heading">Liste des potions</h6>
+					{% for potion in personnage.potions %}
+						<p class="list-group-item-text">
+							{{ potion.label }} - Niveau {{ potion.niveau }}
+						</p>
+					{% endfor %}
+					<p class="list-group-item-text">
+						<a href="{{ path('personnage.admin.update.potion', {'personnage': personnage.id}) }}">Modifier la liste des potions</a>
 					</p>
 				</div>
 				
