--- a/src/LarpManager/Views/admin/ingredient/add.twig
+++ b/src/LarpManager/Views/admin/ingredient/add.twig
@@ -1,20 +1,20 @@
 {% extends "layout.twig" %}
 
-{% block title %}Titres{% endblock title %}
+{% block title %}Ingredients{% endblock title %}
 
 {% block content %}
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path('titre.admin.list') }}">Liste des titres</a></li>
-		<li class="active">Modifier un titre</li>
+		<li><a href="{{ path('ingredient.admin.list') }}">Liste des ingredients</a></li>
+		<li class="active">Ajouter un ingredient</li>
 	</ol>
 	
 	
 	<div class="well bs-component">
-		<form action="{{ path('titre.admin.update', {'titre': titre.id}) }}" method="POST" {{ form_enctype(form) }} novalidate>
+		<form action="{{ path('ingredient.admin.add') }}" method="POST" {{ form_enctype(form) }} novalidate>
 			<fieldset>
-				<legend>Modification d'un titre</legend>
+				<legend>Ajout d'un ingredient</legend>
 					{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 					{{ form(form) }}
 			</fieldset>
