--- a/src/LarpManager/Views/admin/titre/delete.twig
+++ b/src/LarpManager/Views/admin/titre/delete.twig
@@ -6,7 +6,7 @@
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path('magie.domaine.list') }}">Liste des titres</a></li>
+		<li><a href="{{ path('titre.admin.list') }}">Liste des titres</a></li>
 		<li class="active">Supprimer un titre</li>
 	</ol>
 	
