--- a/src/LarpManager/Views/homepage/fragment/personnage.twig
+++ b/src/LarpManager/Views/homepage/fragment/personnage.twig
@@ -34,6 +34,9 @@
 					<li class="list-group-item">
 						<strong>Renommée :</strong> {{ personnage.renomme|default(0) }}
 					</li>
+					{# <li class="list-group-item">
+						<strong>Titre :</strong> {{ app['personnage.manager'].titre(personnage)|default('Aucun') }}
+					</li> #}
 				</ul>
 			</div>
 			
@@ -47,6 +50,20 @@
 					{% endif %}
 				</div>
 			</div>
+		</div>
+		
+		<div class="header">
+			<h5>Pugilat</h5>
+		</div>
+		<div class="row">
+			<div class="col-sm-6">
+				{{ app['personnage.manager'].pugilat(personnage)|default(0) }}
+			</div>
+			<div class="col-sm-6">
+				Le score de pugilat est le nombre de niveaux cumulés (apprenti 1, initié 2, expert 3 etc…) dans les compétences martiales :
+				Agilité / Armes à distance / Armes à 1 main / Armes à 2 mains / Armes d’hast / Armure / Attaque sournoise / Protection / Résistance / Sauvagerie / Stratégie / Survie
+				Si quelqu'un essaie d'intervenir avec une arme dans votre combat, l'effet du pugilat s'applique immédiatement. (écourtez le combat)
+			</div>		
 		</div>
 		
 		{# Religion #}
