gestion des prières et de la compétence prêtrise. Possibilité pour les scénaristes de modifier les domaines de magie de leurs personnages, ainsi que les déclencheurs.

--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -55,6 +55,20 @@
 						<a href="{{ path('personnage.admin.update', {'personnage':personnage.id}) }}">Modifier</a>
 					</p>
 				</div>
+				
+				<div class="list-group-item">
+					<h6 class="list-group-item-heading">Déclencheurs</h6>
+					{% for trigger in personnage.personnageTriggers %}
+						<p class="list-group-item-text">
+							{{ trigger.tag }}
+							-- <a href="{{ path('personnage.admin.trigger.delete', {'personnage': personnage.id, 'trigger': trigger.id}) }}">Supprimer</a>
+						</p>
+					{% else %}
+						<p class="list-group-item-text">La liste est vide</p>
+					{% endfor %}
+					<a href="{{ path('personnage.admin.trigger.add', {'personnage': personnage.id}) }}">Ajouter un déclencheur</a>
+				</div>
+				
 
 				{% if personnage.personnageBackgrounds|length > 0 %}
 					{% for background in personnage.personnageBackgrounds %}
@@ -120,6 +134,9 @@
 							{{ domaine.label }}
 						</p>
 					{% endfor %}
+					<p class="list-group-item-text">
+						<a href="{{ path('personnage.admin.update.domaine', {'personnage': personnage.id}) }}">Modifier la liste des domaines de magie</a>
+					</p>
 				</div>
 				<div class="list-group-item">
 					<h6 class="list-group-item-heading">Liste des sorts</h6>
