--- a/src/LarpManager/Views/public/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/public/groupeSecondaire/detail.twig
@@ -81,6 +81,7 @@
 				<div class="list-group-item-heading">
 					{% if groupeSecondaire.responsable %}
 						<strong>{{ groupeSecondaire.responsable.publicName }}</strong>
+						&nbsp;<a href="{{ path('user.message.new', {'from_id': app.user.id, 'to_id': groupeSecondaire.responsable.participant.user.id }) }}"><i class="fa fa-pencil-square-o"></i>Envoyer un message</a>
 					{% else %}
 						<strong>Ce groupe ne dispose pas encore de responsable</strong>
 					{% endif %}
@@ -97,6 +98,7 @@
 			<div class="list-group-item">
 				<div class="list-group-item-heading">
 					<strong>{{ membre.personnage.publicName }}</strong>
+					{% if groupeSecondaire.responsable %}&nbsp;<a href="{{ path('user.message.new', {'from_id': app.user.id, 'to_id': membre.personnage.participant.user.id }) }}"><i class="fa fa-pencil-square-o"></i>Envoyer un message</a>{% endif %}
 				</div>
 			</div>
 		{% endfor %}
