--- a/src/LarpManager/Views/age/fragment/list.twig
+++ b/src/LarpManager/Views/age/fragment/list.twig
@@ -10,6 +10,7 @@
 		
 		<h4 class="list-group-item-heading">
 			{{ age.label }}
+			<small>( <a href="{{ path('age.perso', {'age': age.id}) }}">{{ age.personnages|length }} personnages</a>)</small>
 			<div class="pull-right btn-group" role="group" aria-label="...">
 				<a href="{{ path('age.detail', {index: age.id}) }}" class="btn btn-primary" role="button">Voir</a>
 			    <a href="{{ path('age.update.view', {index: age.id}) }}" class="btn btn-default" role="button">Modifier</a>
