--- a/src/LarpManager/Views/homepage/orga.twig
+++ b/src/LarpManager/Views/homepage/orga.twig
@@ -18,6 +18,23 @@
 				{{ include("homepage/fragment/new_posts.twig") }}
 			{% endif %}
 			
+			{# creation de personnages #}
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					Votre personnage
+				</div>
+				<div class="panel-body">
+					<div class="list-group">
+						
+						{% for personnage in app.user.personnages %}
+							<a class="list-group-item" href="{{ path('personnage.admin.detail',{'personnage':personnage.id}) }}">#{{ personnage.id }} - {{ personnage.nom }}&nbsp;{{ personnage.surnom }} - {{ personnage.classeName }}</a>
+						{% else %}
+							<a class="list-group-item" href="{{ path('personnage.admin.add') }}">Créer un personnage</a>
+						{% endfor %}
+					</div>
+				</div>
+			</div>
+			
 			{# si l'utilisateur est scénariste, lui afficher les liens vers les groupes dont
 			   il a la responsabilité #}
 	
