--- a/src/LarpManager/Views/admin/competence/fragment/list.twig
+++ b/src/LarpManager/Views/admin/competence/fragment/list.twig
@@ -8,7 +8,8 @@
 	{%  for competence in competences %}
 	<li class="list-group-item">
 		<h4 class="list-group-item-heading">
-			{{ competence.competenceFamily.label }} - <small>Niveau {{ competence.level.label }}</small>
+			{{ competence.competenceFamily.label }} - <small>Niveau {{ competence.level.label }}
+			 / ( <a href="{{ path('competence.perso', {'competence': competence.id}) }}">{{ competence.personnages|length }} personnages</a>)</small>
 			<div class="pull-right btn-group" role="group" aria-label="...">
 				<a href="{{ path('competence.detail', {'competence': competence.id}) }}" class="btn btn-primary" role="button">Voir</a>
 			    <a href="{{ path('competence.update', {'competence': competence.id}) }}" class="btn btn-default" role="button">Modifier</a>
