--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -50,12 +50,20 @@
 							{% else %}
 								Ce personnage n'est pas lié à un joueur
 							{% endif %}
+							&nbsp;/&nbsp;<a href="{{ path('personnage.admin.transfert', {'personnage':personnage.id}) }}">Transferer</a> 
 					</p>
 					<p class="list-group-item-text">
 						<a href="{{ path('personnage.admin.update', {'personnage':personnage.id}) }}">Modifier</a>
 					</p>
 				</div>
 				
+				<div class="list-group-item">
+					<h6 class="list-group-item-heading">Matériel</h6>
+					{{ personnage.materiel }}
+					<br />
+					<a href="{{ path('personnage.admin.materiel', {'personnage': personnage.id}) }}">Modifier</a>
+				</div>
+					
 				<div class="list-group-item">
 					<h6 class="list-group-item-heading">Déclencheurs</h6>
 					{% for trigger in personnage.personnageTriggers %}
@@ -216,6 +224,7 @@
 							{{ competence.competenceFamily.label }}&nbsp({{ competence.level.label }}) : {{ competence.description|markdown }}
 						</p>					
 					{% endfor %}
+					<p><a href="{{ path('personnage.admin.competence.add', {'personnage':personnage.id}) }}">Ajouter une compétence</a></p>
 					<p><a href="{{ path('personnage.competence.remove', {'personnage':personnage.id}) }}">Retirer la dernière compétence acquise</a></p>
 				</div>
 				<div class="list-group-item">
