--- a/src/LarpManager/Views/religion/fragment/list.twig
+++ b/src/LarpManager/Views/religion/fragment/list.twig
@@ -9,6 +9,7 @@
 	<li class="list-group-item">
 		<h4 class="list-group-item-heading">
 			{{ religion.label }} 
+			<small>( <a href="{{ path('religion.perso', {'religion': religion.id}) }}">{{ religion.personnagesReligions|length }} personnages</a>)</small>
 			<div class="btn-group pull-right" role="group" aria-label="...">
 				<a href="{{ path('religion.detail', {index: religion.id}) }}" class="btn btn-primary" role="button">Détail</a>
 			    <a href="{{ path('religion.update', {index: religion.id}) }}" class="btn btn-default" role="button">Modifier</a>
